Update route model to use GPX file references
Replaced inline GPX content with GPX file references in route creation and updates. Introduced parsing logic for GPX data to extract metadata and preview points. Updated database schema, DTOs, services, and tests to support the new approach.